[gd_scene load_steps=8 format=3 uid="uid://dg1ans30ehh6f"]

[ext_resource type="Script" path="res://grenade.gd" id="1_tk6fo"]
[ext_resource type="PackedScene" uid="uid://bnjnqwom2kws1" path="res://blender import/model_hand_right.tscn" id="2_e5efc"]
[ext_resource type="PackedScene" uid="uid://ndkw41r64lu4" path="res://Scenes/model_pipebomb.tscn" id="2_oi57i"]
[ext_resource type="PackedScene" uid="uid://btmhdwlq4yb5e" path="res://blender import/model_hand_left.tscn" id="4_tbov2"]

[sub_resource type="Animation" id="Animation_3xc37"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand_left:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1.33793, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand_left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.18358, 0, 0.597087)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hand_right:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0234612, 0.072225, 0.584678)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hand_right:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_gudao"]
resource_name = "shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand_left:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -1.33793, 0), Vector3(0.212619, -0.390683, -0.775097), Vector3(0, -1.33793, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand_left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.18358, 0, 0.597087), Vector3(-1.18358, 0, 0.597087), Vector3(-1.18358, 0, 0.597087)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hand_right:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.0234612, 0.072225, 0.584678), Vector3(-0.0234612, 0.072225, 0.830234), Vector3(-0.0234612, 0.072225, 0.584678)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hand_right:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.878285, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5rkwu"]
_data = {
"RESET": SubResource("Animation_3xc37"),
"shoot": SubResource("Animation_gudao")
}

[node name="Grenade" type="Node3D" groups=["consumeable"]]
script = ExtResource("1_tk6fo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5rkwu")
}

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[node name="creation_spot" type="RayCast3D" parent="."]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0)

[node name="hand_left" parent="." instance=ExtResource("4_tbov2")]
transform = Transform3D(0.0288459, 0, -0.121626, 0, 0.125, 0, 0.121626, 0, 0.0288459, -1.18358, 0, 0.597087)

[node name="hand_right" parent="." instance=ExtResource("2_e5efc")]
transform = Transform3D(0.125, 0, 0, 0, 0.125, 0, 0, 0, 0.125, -0.0234612, 0.072225, 0.584678)

[node name="model_pipebomb" parent="hand_right" instance=ExtResource("2_oi57i")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -0.729226, 9.53674e-07, -6.73586)
